fixed View Calendar btn width on mobile screens, added google analytics tracker

--- a/src/index.css
+++ b/src/index.css
@@ -1261,6 +1261,10 @@ footer {
     padding-bottom: 5px;
   
   }
+
+  .w-50 {
+    width: 70%!important;
+  }
 }
 
 @media (min-width: 820px) and (max-width: 912px) and (min-height: 1180px) and (max-height: 1368px) {
